first-html-page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ availability. Females cooperate when hunting and prey mostly on large ungulates,
 deer, buffalo, zebra and even giraffe
 </p>
 
-<div class="char"><h5>The difference between Characteristics and Behavior</h5></div>
+<h5>The difference between Characteristics and Behavior</h5>
 
 <table>
     <tr>
